Re: #564 - fix z-index for iiif zoom slider

--- a/source/sass/search/_object.scss
+++ b/source/sass/search/_object.scss
@@ -173,6 +173,7 @@
       position: relative;
       width: 100%;
       max-width: $max-width;
+      z-index: 0;
 
       &.active{
         padding-bottom: $space;
